Ingress/nginx-two-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-two-ingress
spec:
  selector:
    matchLabels:
      app: nginx-two-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-two-ingress
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          protocol: TCP
