Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  labels:
    name: ingress-test
spec:  
  rules:
  - host: www.external.com
    http:
      paths:
      - backend:
          service:
            name: nginx-one-service
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
